# datacert

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .npmignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.cli.json  tsconfig.json  tsconfig.node.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
docker/: nginx.conf
docs/: DEPLOYMENT.md  ONE_PAGER.md  RELEASE.md  SIMPLIFICATION_NOTES.md  TEST_SCENARIOS.md  USER_PERSONAS.md  UX_AUDIT.md  VALUE_PROPOSITION.md  VERIFICATION_PLAN_V2.md  faq.md  getting-started.md  skeptic-faq.md
e2e/: profiling.spec.ts
public/: manifest.json
scripts/: create-excel-fixtures.js  generate-baseline.py  test.sh
src/: vite-env.d.ts
src/wasm/: Cargo.toml  rustfmt.toml
src/wasm/bindings/: BaseStats.ts  CategoricalStats.ts  ColumnProfile.ts  ColumnQualityMetrics.ts  CorrelationMatrix.ts  DataType.ts  FreqEntry.ts  Histogram.ts  HistogramBin.ts  NumericStats.ts  ProfilerResult.ts  QualityIssue.ts
src/wasm/src/: lib.rs
src/wasm/src/export/: json.rs
src/wasm/src/parser/: avro.rs  csv.rs  extractor.rs  json.rs  mod.rs  parquet.rs
src/wasm/src/quality/: completeness.rs  duplicates.rs  mod.rs  patterns.rs  uniqueness.rs
src/wasm/src/stats/: categorical.rs  correlation.rs  histogram.rs  mod.rs  numeric.rs  profiler.rs  tree.rs  types.rs
tickets/: README.md  (+21 more)
(+231 files in other folders)
