[package]
name = "datalens-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
csv = "1.3"
encoding_rs = "0.8"
hyperloglogplus = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
parquet = { version = "50.0", default-features = false, features = ["flate2", "snap", "lz4"] }
bytes = "1.5"

[profile.release]
opt-level = "s"
lto = true
